# quickjs-worker

./: .gitignore  Cargo.toml  README.md  imports.js  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  test.js  test.txt  test2.js  tsconfig.json
bench/: run.mjs  v8-bench.js
src/: handle.rs  js_data.rs  lib.rs  qjs.rs
test/: data_serialization.spec.ts  promise_resolution.spec.ts  quickjs.spec.ts
