[package]
name = "quickjs-vm"
version = "0.2.0"
description = "Run a QuickJS worker from NodeJS"
authors = ["me@scottlott.com"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
neon = { version = "1.1.1", features = ["futures"] }
quickjs_runtime = { version = "0.17.0", features = ["setimmediate", "setinterval", "settimeout"] }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0.116"
cpu-time = "1.0.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]